SSDM-13256: Added compatibleWithImport.